--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -119,13 +119,13 @@
 
     &.open {
       span:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
+        transform: translateY(8px) rotate(45deg);
       }
       span:nth-child(2) {
         opacity: 0;
       }
       span:nth-child(3) {
-        transform: rotate(-45deg) translate(5px, -5px);
+        transform: translateY(-8px) rotate(-45deg);
       }
     }
   }
@@ -151,7 +151,7 @@
     .mobileNav {
       display: flex;
       flex-direction: column;
-      gap: 30px;
+      gap: 20px;
 
       a {
         font-size: 24px;
