--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,7 @@ $desktop-width: 1920px;
 $laptop-width: 1440px;
 $tablet-width: 1024px;
 $mobile-width: 768px;
-$mobile-small-width: 500px;
+$mobile-small-width: 600px;
 
 @mixin flex-center {
   display: flex;
